# afrc

./: .gitignore  .lgtm.yml  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  changelog.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
afrc/: __init__.py  _version.py  afrc.py  config.py  iofunctions.py  polymer.py
afrc/polymer_models/: fjc.py  frc.py  nudep_saw.py  saw.py  wlc.py  wlc2.py
afrc/tests/: conftest.py  test_afrc.py  test_config.py  test_fjc.py  test_frc.py  test_iofunctions.py  test_nudep_saw.py  test_polymer.py  test_saw.py  test_wlc.py  test_wlc2.py
demo/: compare_end_to_end.ipynb  compare_zhou_obrien_WLCs.ipynb  demo_AnalyticalFRC.ipynb  demo_FreelyJointedChain.ipynb  demo_FreelyRotatingChain.ipynb  demo_NuDepSAW.ipynb  demo_SAW.ipynb  demo_WormLikeChain.ipynb  demo_WormLikeChain2.ipynb
devtools/: README.md
devtools/conda-recipe/: meta.yaml
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  make.bat  overview.rst  quickstart.rst  requirements.txt  update_docs.sh
docs/modules/: afrc.rst  afrc.rst~
docs/polymer_models/: afrc.rst  freely_jointed_chain.rst  freely_rotating_chain.rst  index.rst  nu_dependent_saw.rst  self_avoiding_walk.rst  worm_like_chain_obrien.rst  worm_like_chain_zhou.rst
docs/polymer_models_application/: afrc.rst  freely_jointed_chain.rst  freely_rotating_chain.rst  index.rst  nu_dependent_saw.rst  self_avoiding_walk.rst  worm_like_chain_obrien.rst  worm_like_chain_zhou.rst
docs/usage/: quickstart.rst  quickstart.rst~
