[build-system]

# delete cython/numpy if not needed
requires = ["setuptools>=61", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"


# define project info
[project]
name = "afrc"
dynamic = ["version"]
description = "afrc is a Python package that implements an analytical version of the Flory Random Coil (i.e. the AFRC) for polypeptides."
authors = [
    {name = "Alex Holehouse", email = "alex.holehouse@wustl.edu"}
]
license = {text = "LGPLv3"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "polymer physics",
    "intrinsically disordered proteins",
    "IDP",
    "Flory random coil",
    "unfolded proteins",
    "radius of gyration",
    "biophysics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# add in as needed
dependencies = [
    "numpy>=1.12.0",
    "scipy",
]

[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
]

[project.urls]
Homepage = "https://github.com/idptools/afrc"
Documentation = "https://afrc.readthedocs.io/"
Repository = "https://github.com/idptools/afrc"
"Bug Tracker" = "https://github.com/idptools/afrc/issues"
"Google Colab" = "https://colab.research.google.com/drive/1WHw8ous7IgcKd2LKYuJLeBTlkdEYoRAk?usp=sharing"

[tool.setuptools]
zip-safe = false
include-package-data = true 

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["afrc", "afrc.*"]  # Discover all sub-packages inside the main package

[tool.setuptools.package-data]
afrc = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
	
[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "afrc/_version.py"
